--- a/src/app/style.css
+++ b/src/app/style.css
@@ -17,6 +17,13 @@
   width: 50px;
   height: 17px;
   margin-left: 10px;
+  gap: 5px;
+}
+.firstname {
+  color: blue;
+}
+.lastname {
+  color: blueviolet;
 }
 .card-container h2 {
   font-size: 20px;
